tests/fixtures/invalid/assignment_type_mismatch.lby
fn main -> bool
    let value bool = false
    value = 1
    value
